# MTECS3D

./: .gitignore  CMakeLists.txt  README.md
example/: config.txt
include/: mtecs3d.h
include/mtecs3d/: BandLimitingProjector.h  Common.h  CorrelationNoiseProjector.h  TensorDecomp.h
main/: mtecs3d.cpp
src/: BandLimitingProjector.cpp  CorrelationNoiseProjector.cpp  ExtractCoefficient.cpp  ReduceCorr.cpp  TensorDecomp.cpp  optimize.cpp  optimize.h  utils.cpp  utils.h
